--- a/index.html
+++ b/index.html
@@ -6,18 +6,49 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <style>
-        body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+        }
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 75%;
+            right: 0;
+        }
         .sidebar {
             position: absolute;
             width: 25%;
             height: 100%;
             top: 0;
             left: 0;
-            background-color: white;
-            padding: 10px;
-            box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+            background-color: #f8f8f8;
+            padding: 20px;
+            box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
             overflow: auto;
+            border-right: 1px solid #ddd;
+        }
+        .sidebar h2 {
+            margin-top: 0;
+            color: #333;
+        }
+        .sidebar button {
+            display: block;
+            width: calc(100% - 40px);
+            margin: 10px 0;
+            padding: 10px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .sidebar button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -25,8 +56,8 @@
     <div id="map"></div>
     <div class="sidebar" id="sidebar">
         <h2>Spatial Analysis</h2>
-        <button onclick="measureDistance()">Measure Distance</button><br><br>
-        <button onclick="nearestNeighbor()">Nearest Neighbor</button><br><br>
+        <button onclick="measureDistance()">Measure Distance</button>
+        <button onclick="nearestNeighbor()">Nearest Neighbor</button>
         <button onclick="createBuffer()">Create Buffer</button>
     </div>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
@@ -89,8 +120,8 @@
                 },
                 'layout': {},
                 'paint': {
-                    'fill-color': '#888',
-                    'fill-opacity': 0.4
+                    'fill-color': '#007bff',
+                    'fill-opacity': 0.5
                 }
             });
         }
